mvp for tvalidation, upgradablility and enhancing

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "viem": "^2.42.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.4.0"
+    "@openzeppelin/contracts": "^5.4.0",
+    "@openzeppelin/contracts-upgradeable": "^5.4.0"
   }
 }
